# evalyn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: 2026-07-21-evalyn-design.md  2026-07-22-inspect-spike-findings.md  2026-07-23-handoff-premerge-fixes.md  2026-07-23-plan2-kickoff.md  CONTEXT.md  EVALYN_EXPLAINED.md  JOURNAL.md  ROADMAP.md
docs/superpowers/plans/: 2026-07-22-evalyn-gate-foundation.md  PLAN-1-KICKOFF.md  ROADMAP.md
examples/: toy_target.py
packs/example/: target.yaml
packs/example/probes/: grounding.yaml  injection.yaml  invariants.yaml
src/evalyn/: cli.py
src/evalyn/engine/: baseline.py  gate.py  run.py  solver.py  task_builder.py  validate.py
src/evalyn/scoring/: tier1.py  tier2.py
src/evalyn/targets/: loader.py  schema.py  streams.py
tests/: conftest.py  test_cli.py  test_e2e_gate.py  test_example_pack.py  test_smoke.py
tests/engine/: test_gate.py  test_run.py  test_solver.py  test_task_builder.py  test_validate.py
tests/fixtures/minipack/: target.yaml
tests/fixtures/minipack/probes/: invariants.yaml
tests/scoring/: test_tier1.py  test_tier2.py
tests/targets/: test_loader.py  test_schema.py  test_streams.py
