[project]
name = "evalyn"
version = "0.1.0"
description = "Standalone, project-agnostic evaluation agent for LLM-powered products."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dashanka Nadeeshan De Silva", email = "dashankadesilva@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "inspect_ai>=0.3.249",
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
    "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/DashankaNadeeshanDeSilva/evalyn"
Issues = "https://github.com/DashankaNadeeshanDeSilva/evalyn/issues"

[project.scripts]
evalyn = "evalyn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalyn"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
